feat(core): add import from git flow
This commit introduces a /launcher/import/git endpoint that takes a ZIP file containing the necessary files to deploy from an existing git repository.
The launcher backend will clone the repository, unzip the files in the repository and configure the build the same way that /launcher/launch does (using the YAML files in .openshiftio folder)

Fixes #651
