# core/core-api/src/main/java/io/fabric8/launcher/core/api/projectiles/ImportProjectile.java
@@ -1,0 +1,4 @@
+package io.fabric8.launcher.core.api.projectiles;
+
+public interface ImportProjectile extends CreateProjectile {
+}
